--- a/FacturacionElectronicaDesktop/FacturacionElectronicaDesktop/Vista/Ventas.resx
+++ b/FacturacionElectronicaDesktop/FacturacionElectronicaDesktop/Vista/Ventas.resx
@@ -117,4 +117,115 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnPDF.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACQAAAAhCAYAAACxzQkrAAAABGdBTUEAALGOfPtRkwAAACBjSFJNAACH
+        DwAAjA8AAP1SAACBQAAAfXkAAOmLAAA85QAAGcxzPIV3AAAKOWlDQ1BQaG90b3Nob3AgSUNDIHByb2Zp
+        bGUAAEjHnZZ3VFTXFofPvXd6oc0wAlKG3rvAANJ7k15FYZgZYCgDDjM0sSGiAhFFRJoiSFDEgNFQJFZE
+        sRAUVLAHJAgoMRhFVCxvRtaLrqy89/Ly++Osb+2z97n77L3PWhcAkqcvl5cGSwGQyhPwgzyc6RGRUXTs
+        AIABHmCAKQBMVka6X7B7CBDJy82FniFyAl8EAfB6WLwCcNPQM4BOB/+fpFnpfIHomAARm7M5GSwRF4g4
+        JUuQLrbPipgalyxmGCVmvihBEcuJOWGRDT77LLKjmNmpPLaIxTmns1PZYu4V8bZMIUfEiK+ICzO5nCwR
+        3xKxRoowlSviN+LYVA4zAwAUSWwXcFiJIjYRMYkfEuQi4uUA4EgJX3HcVyzgZAvEl3JJS8/hcxMSBXQd
+        li7d1NqaQffkZKVwBALDACYrmcln013SUtOZvBwAFu/8WTLi2tJFRbY0tba0NDQzMv2qUP91829K3NtF
+        ehn4uWcQrf+L7a/80hoAYMyJarPziy2uCoDOLQDI3fti0zgAgKSobx3Xv7oPTTwviQJBuo2xcVZWlhGX
+        wzISF/QP/U+Hv6GvvmckPu6P8tBdOfFMYYqALq4bKy0lTcinZ6QzWRy64Z+H+B8H/nUeBkGceA6fwxNF
+        hImmjMtLELWbx+YKuGk8Opf3n5r4D8P+pMW5FonS+BFQY4yA1HUqQH7tBygKESDR+8Vd/6NvvvgwIH55
+        4SqTi3P/7zf9Z8Gl4iWDm/A5ziUohM4S8jMX98TPEqABAUgCKpAHykAd6ABDYAasgC1wBG7AG/iDEBAJ
+        VgMWSASpgA+yQB7YBApBMdgJ9oBqUAcaQTNoBcdBJzgFzoNL4Bq4AW6D+2AUTIBnYBa8BgsQBGEhMkSB
+        5CEVSBPSh8wgBmQPuUG+UBAUCcVCCRAPEkJ50GaoGCqDqqF6qBn6HjoJnYeuQIPQXWgMmoZ+h97BCEyC
+        qbASrAUbwwzYCfaBQ+BVcAK8Bs6FC+AdcCXcAB+FO+Dz8DX4NjwKP4PnEIAQERqiihgiDMQF8UeikHiE
+        j6xHipAKpAFpRbqRPuQmMorMIG9RGBQFRUcZomxRnqhQFAu1BrUeVYKqRh1GdaB6UTdRY6hZ1Ec0Ga2I
+        1kfboL3QEegEdBa6EF2BbkK3oy+ib6Mn0K8xGAwNo42xwnhiIjFJmLWYEsw+TBvmHGYQM46Zw2Kx8lh9
+        rB3WH8vECrCF2CrsUexZ7BB2AvsGR8Sp4Mxw7rgoHA+Xj6vAHcGdwQ3hJnELeCm8Jt4G749n43PwpfhG
+        fDf+On4Cv0CQJmgT7AghhCTCJkIloZVwkfCA8JJIJKoRrYmBRC5xI7GSeIx4mThGfEuSIemRXEjRJCFp
+        B+kQ6RzpLuklmUzWIjuSo8gC8g5yM/kC+RH5jQRFwkjCS4ItsUGiRqJDYkjiuSReUlPSSXK1ZK5kheQJ
+        yeuSM1J4KS0pFymm1HqpGqmTUiNSc9IUaVNpf+lU6RLpI9JXpKdksDJaMm4ybJkCmYMyF2TGKQhFneJC
+        YVE2UxopFykTVAxVm+pFTaIWU7+jDlBnZWVkl8mGyWbL1sielh2lITQtmhcthVZKO04bpr1borTEaQln
+        yfYlrUuGlszLLZVzlOPIFcm1yd2WeydPl3eTT5bfJd8p/1ABpaCnEKiQpbBf4aLCzFLqUtulrKVFS48v
+        vacIK+opBimuVTyo2K84p6Ss5KGUrlSldEFpRpmm7KicpFyufEZ5WoWiYq/CVSlXOavylC5Ld6Kn0Cvp
+        vfRZVUVVT1Whar3qgOqCmrZaqFq+WpvaQ3WCOkM9Xr1cvUd9VkNFw08jT6NF454mXpOhmai5V7NPc15L
+        Wytca6tWp9aUtpy2l3audov2Ax2yjoPOGp0GnVu6GF2GbrLuPt0berCehV6iXo3edX1Y31Kfq79Pf9AA
+        bWBtwDNoMBgxJBk6GWYathiOGdGMfI3yjTqNnhtrGEcZ7zLuM/5oYmGSYtJoct9UxtTbNN+02/R3Mz0z
+        llmN2S1zsrm7+QbzLvMXy/SXcZbtX3bHgmLhZ7HVosfig6WVJd+y1XLaSsMq1qrWaoRBZQQwShiXrdHW
+        ztYbrE9Zv7WxtBHYHLf5zdbQNtn2iO3Ucu3lnOWNy8ft1OyYdvV2o/Z0+1j7A/ajDqoOTIcGh8eO6o5s
+        xybHSSddpySno07PnU2c+c7tzvMuNi7rXM65Iq4erkWuA24ybqFu1W6P3NXcE9xb3Gc9LDzWepzzRHv6
+        eO7yHPFS8mJ5NXvNelt5r/Pu9SH5BPtU+zz21fPl+3b7wX7efrv9HqzQXMFb0ekP/L38d/s/DNAOWBPw
+        YyAmMCCwJvBJkGlQXlBfMCU4JvhI8OsQ55DSkPuhOqHC0J4wybDosOaw+XDX8LLw0QjjiHUR1yIVIrmR
+        XVHYqLCopqi5lW4r96yciLaILoweXqW9KnvVldUKq1NWn46RjGHGnIhFx4bHHol9z/RnNjDn4rziauNm
+        WS6svaxnbEd2OXuaY8cp40zG28WXxU8l2CXsTphOdEisSJzhunCruS+SPJPqkuaT/ZMPJX9KCU9pS8Wl
+        xqae5Mnwknm9acpp2WmD6frphemja2zW7Fkzy/fhN2VAGasyugRU0c9Uv1BHuEU4lmmfWZP5Jiss60S2
+        dDYvuz9HL2d7zmSue+63a1FrWWt78lTzNuWNrXNaV78eWh+3vmeD+oaCDRMbPTYe3kTYlLzpp3yT/LL8
+        V5vDN3cXKBVsLBjf4rGlpVCikF84stV2a9021DbutoHt5turtn8sYhddLTYprih+X8IqufqN6TeV33za
+        Eb9joNSydP9OzE7ezuFdDrsOl0mX5ZaN7/bb3VFOLy8qf7UnZs+VimUVdXsJe4V7Ryt9K7uqNKp2Vr2v
+        Tqy+XeNc01arWLu9dn4fe9/Qfsf9rXVKdcV17w5wD9yp96jvaNBqqDiIOZh58EljWGPft4xvm5sUmoqb
+        PhziHRo9HHS4t9mqufmI4pHSFrhF2DJ9NProje9cv+tqNWytb6O1FR8Dx4THnn4f+/3wcZ/jPScYJ1p/
+        0Pyhtp3SXtQBdeR0zHYmdo52RXYNnvQ+2dNt293+o9GPh06pnqo5LXu69AzhTMGZT2dzz86dSz83cz7h
+        /HhPTM/9CxEXbvUG9g5c9Ll4+ZL7pQt9Tn1nL9tdPnXF5srJq4yrndcsr3X0W/S3/2TxU/uA5UDHdavr
+        XTesb3QPLh88M+QwdP6m681Lt7xuXbu94vbgcOjwnZHokdE77DtTd1PuvriXeW/h/sYH6AdFD6UeVjxS
+        fNTws+7PbaOWo6fHXMf6Hwc/vj/OGn/2S8Yv7ycKnpCfVEyqTDZPmU2dmnafvvF05dOJZ+nPFmYKf5X+
+        tfa5zvMffnP8rX82YnbiBf/Fp99LXsq/PPRq2aueuYC5R69TXy/MF72Rf3P4LeNt37vwd5MLWe+x7ys/
+        6H7o/ujz8cGn1E+f/gUDmPP8usTo0wAAAAlwSFlzAAALEgAACxIB0t1+/AAACAxJREFUWEe1lwtQ1Mcd
+        x0kziTMmba2pWlCEAUFMBCvWCU2sxjbNwzSGIeNMOxkGamOinU4yWpo2o7UJaFQSH5FavWC1ReQZFUJA
+        KtzxlIcS6zM87jgewvG69x3HcQd++/tt2MtJwQTS7sz3dvf/393fZ3+//e/u+YyMjEDI7YZ7EvH7UaFR
+        jI7eQ552XqLn3uN8lb4A4sakUQB3xokTPzcPOWByDMI4aIfRQeJ8rGwYK5scDtHuCw3BxPng4ISGJ5OP
+        gKGCm2Zi0WhhaWqBRd0KS4tG5FbKdf++hptVF6FpuILmmlo0V9dCfekymusvo6W2XtRbaurpWYOQltq1
+        kji/XlmJxqYmuNnG1/CSDzdiTxhMJpRGPQ3lgsegCvmRkDIoEsrgSJQGLMP5WYG44PsoVEHLoQxcjsKH
+        /KAK/CGUAREoXRiBEv9wahcB1aJIlAWvoJwUuAwlEauQezoDur4+3LlzBy6Xa0IQKQHEqc+gR96SKBTO
+        DkIhQbHyH/ZH895DcHZ2oyvjLLJ8HkTvJ+fh7O6F9ujfRb0x6X24evrgaNHiQuhKfDonFEXUl3X+B2Eo
+        CFmBzFOnUFNfJ+wMUSgnApH6EshoRHbEE8iduwhnAsNxJiAcGQ/PR2deIWoTtuN2RSUqf7MJlrY2FD4T
+        DafNhsq419D+cR4qf7sVh318kLtgiejn0fwlyAlbifyzZ5B77pzwEKdBWleThc8D1G8w4J9Lo5D+SDDS
+        FyxFhv9jODnTF9rcPNS//Rf01TdAtek1mNRqfLz6Kahzz6Hh3T24kaLAIIWj+WQa0uYtRrpfGE6Td9JJ
+        Gb5hSAuNRMEn+cglKO80PDz8VUB6KB5diWPfW4jU+YuRSrM9POP7uHEiHaM0s+tpGdhOXnAZLPjo8SgY
+        1Boot/4e1xTH0UkLuWjzm1DMCUaqbyhS/ag/a24wji1ahuLCIgI6i4aGBtTV1aGlpUV4iRNDeHvrLg99
+        uGQFDs7yR4pfKFLmhyKZgDRFF1D2p514m2D+SHLaB6FvaoRRq8W+mXOhKS5Byba38A69S/ELQQoBeTQ3
+        CIeCwlFZXoHTWZnYsmULYmJiEBsbi4SEBCiVSrFPcSgl1JdraGAAuxYuRuJ938Huh+ZhFynxgVk4vuY5
+        HA6LRNKDs7GDFnHaixuQG/c63rnv21SfgdQnf46UpY8j6YHZ2D1zHt4jyN0sHmPGI0icE4D62lpcJGVl
+        ZUGhUODgwYPYs2cPkpOTUV5e7oHh3ANkMluwP24jdj7zApJ+EYNEUtKLMdj51LPYtW49Eqm89+VfYefq
+        p7HjybV4bz3VY36Jd3+2DknPrsfe6A1IjnsVSZvfwPvxm7D3pQ3U5mUciN2I5qZmtLW34erVq6glsKqq
+        KqhUKpSVlaGiogI6nc7jJbFTC8LREQzRHmGnxTZIuZST3uttVqhv34bOaEA3hbabch2tuW69Hj30dfKz
+        XucQWunT/nzz61ArVdBTv1561282wUh7XH9/P/po8bPxrq4udHR0CGkp9LdpbA6dCBn/SCgZT29xslqt
+        orOBDOsptHoCMZA4H+A6GTNTu7bVazBwTIHO+I2wUN1I7c0EYyQws9ksZLFYxHgsG20d/K6np+e/gSTU
+        eDGUiQZtb2/3APBs7xLNnIGa1/wU7SlHYKQ+BjLME2CDLB6DxSAMxWIghpwUaLzGA7EBBhAeYm+NeYk9
+        xB5p2rQZ7YmJ0FZXw0p9vUEYQHqJQaT4OQNJm18bqLOzU+QMImFkmcNnpnad+Xm4tO4FtB5VwE6ApjEg
+        71BJz3CZ9yLOGYhtsc0pA/GsGUKGQsrEs23vQAHtR7qGz2Cjj4TbTwRit9tFWQLxQp8yEH8ZPKiE8oBQ
+        XYjeOYacKPYPRG/j5xik/pYxz0gQzlkMxHLQ/Ynr0wLiT5MH94aQgCIkZMA6oEc2eaggIIQCRpc6ei5B
+        2Bsyl+KTn8GmFTL2EA8ojUggrrM4KV+JRUdmJjIjlkOjKhf3LNtYiFgShD3jdDqFuN7b2zs1IDbIbmUg
+        hmAgliw7aDO1W2w49d1ZcFIfQ91lHCJP2YwmAeUgT7CGaaNlOan9EMHwif+NgGTM7xIB8Z27OD4eVz44
+        gBF2FSWdshR/9bkfXRq1GINPARN/nf0DsFnMYmy+1nLYeAefMhDHmWfDEOx+mQ9Tu76bt5AevlyA8MnY
+        dbkBmqpqfEpnWvK37ofix6tw/CerUPq7BJSRzv06Dqrd+0R7BpqWh7gTd5brQK4JTkVvvIkLW99CTcpR
+        lPxhO0rpQle948/QZJ+FSdOGz44cxYkn1uJkdDTK9u1Ht6YVl/5xSvR1kY1peYh3aAnEMC73iFgfPS1q
+        HPANxC26yvbeuAWrtt3z94mTLI86Xei4WIOKpH0488qruH46Bz2X6jFEY/XTcTQtIF6EvI44Oem6Uqs4
+        gY+i1uJaRpZ4xuFy0ZkkFi+1ZfGXxP80+G+WTAzppneN+QVw2OwYoJ1+ykB8qLIhTvXni7E/+iXUkNuP
+        P/e8eMaGPQCUM4QAGTMkcxZfiaXneGHz2FMC4j2HO3G6QjB/i4uHhe5E20LC4LLahQHpEe4zHkSe5Cx5
+        xZGJ204LiA9TTkdWPY9/ffAhtgUGoe/KTfHMG2C8vO9YE6VpA/GRwcmq60VNTi5MrR2iLtuyYW/dC8I7
+        sY0pA/Ea4hN+vIHxEFISxrs8mbgNe39KQPypFxYWIjs7Gzk5Of9T8Zitra1igmzznkDe4r2Hz67/h3gd
+        safcbjf+A60kVg76i+19AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnXML.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACUAAAAlCAYAAADFniADAAAAA3NCSVQICAjb4U/gAAAAAXNSR0IArs4c
+        6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAAZdEVYdFNvZnR3YXJlAHd3dy5p
+        bmtzY2FwZS5vcmeb7jwaAAAEKUlEQVRYR+1YSShuYRgmU4QoGyFKhgiJjTERShZkQ4gUC0OUZErGSIqQ
+        DWUKESWJTEVkIQsWRFnJsJBhYWHMe3vee75z/3P/w/3dzv/fzX3q6Zx3OO/7+L8xZqSCvr4+MjMz04Qx
+        MTFSVcOhJ+rt7Y1sbW0pKSmJhoaGqLu7m3p6er5FfDM6OkpBQUEsLDU1VapuGD4V1djYKHn+HmlpafIv
+        VlVVJXn/DFVRdnZ2VFNTI3n+HikpKbIo0NA/1KSiwIWFBSn6OUwuCjw8PJQy1PFPRFlaWtLp6amUpY9/
+        Igp0dHSk19dXKVMJo4qKjIxUFSQYFhYmZSphVFErKyuUlZVFBQUFChYXF1NwcDA5ODio/lpGFfUVWlpa
+        uA/6/Q49Ue/v77x5GlsU6qMP+v0OPVEAJmFTU5NkGQeojz5qUIjCsRAbG0vm5ubk5eVFCQkJFB0drTlR
+        19PTk/ugX3p6uqTgJ2RRUVFRqivEVER/ARaFFeDt7c1Be3t7mpqaopmZGYqPj5c/Ki8vp4mJCerv72cb
+        V5LJyUkaHh7mmMgDKysraWxsjGv4+/uzD6MwNzfHc0k3VxD9xUpkUVgBvr6+csL8/DwHb25u2HZ2dqan
+        pyf2ZWRksA/LWuDq6oqsrKzk729vb6XIr/zm5ma2t7e35Txdor9YiaqiQAGMf3V1Nb/v7u7K8cLCQvZd
+        X1/zMzQ0lP2JiYlsX1xc8BN58NfW1rKNvUvU0KVBoioqKjhhcXGRHh4e+B2TX8S7urrY19rays/Ozk72
+        Y3ifn59pcHCQ/SUlJezXRBR4cnLCScDAwIAihlspgLkCHB0dsR+1cNg2NDSwH5sk/JqJGhkZ4SQgMzNT
+        EZuenmY/zq+zszOec25ubuwrLS2loqIifu/t7eV8TUSJw/L+/p6f2Hl142tra+wPDw+Xb5RtbW389PDw
+        oNzcXH4fHx/nfE1EYTiA7Oxs+VLW3t4ux/f399kXGBhIycnJ/A6cn59zPD8/n+3NzU22hajZ2Vm5hi7/
+        KEoUxISFHRERwTbg7u7OPrHqQkJCyNramh4fH9kWcy8vL4/tnZ0dtuvq6ti+u7uj1dVV2traor29Pero
+        6OD4l6JsbGzk1SY+ALG/AOvr62y/vLywjWGGfXBwwHZcXBzbOTk5bGPPgv3ZWbqxscFxPVHYSX18fDiI
+        HR2NxE4siGuGn58f70fYKAMCAti2sLBQ5AniBoAcELaLiwvXxM4tCCFYHIijv2JH//j40BNhaqI/dMii
+        gKWlJdVkU3F5eVlSoiMKwJhi1WEIy8rK6PLyko6PjzUn6qI++qCfmEsCClECmD/19fWSZRygPvqoQU8U
+        VJvijo76Bt/R/4v6rihxhzIWUP9borDx4X5kTKA++hgsysnJiY8bnHOurq6aE3VRH30MEgVo+T/Pr4g+
+        +iD6AZJFSua5dNSlAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
